--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ ADMIN_SECRET_KEY=EDUCATEME-ADMIN-2024
 
 
 
-MONGODB_URI=mongodb://localhost:27017/admin_auth
+MONGODB_URI=mongodb+srv://vikasrahangdale5606_db_user:RFyBjvO7qQHPgT2F@educate.cp5lrve.mongodb.net/educateMe
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRE=7d
+
+vikasrahangdale5606_db_user
+RFyBjvO7qQHPgT2F
